[tool.poetry]
name = "array_shift"
version = "0.1.0"
description = ""
authors = ["Matthew Holder <holdermatthew5@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
